# serde-ipc

./: Cargo.toml
src/: bench.rs  lib.rs
tests/: integration.rs
