[package]
name = "serde-ipc"
version = "0.1.0"
authors = ["sum-catnip <catnip@catnip.fyi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"

[dependencies]
shared_memory = "0.10.0"
bincode = "1.1.4"
snafu = "0.6.2"
serde = "1.0.104"
log = "0.4.8"
simple_logger = "1.0.1"

[dev-dependencies]
rand = "0.7.3"

[[bin]]
name = "bench"
path = "src/bench.rs"
